# project_folder

./: .coverage  .gitignore  README.md  main.py  pyproject.toml
src/: aeroplanes.py  api_adapter.py  api_base.py  base_file.py  json_saver.py
tests/: conftest.py  test_aeroplanes.py  test_api_adapter.py  test_json_saver.py
